--- a/repos/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/repos/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,10 @@
 /* Add CSS Styling */
+.avater.proportioned{ 
+    width:300px;
+    height: auto;
+
+}
+.avater.distorted{width: 200px;
+    height: 400px;
+
+}
